Work on outline.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -1,5 +1,5 @@
 @article{swanson2009no,
-    title={No asymmetry in geomagnetic reversals recorded by 1.1-billion-year-old Keweenawan basalts},
+    title={No asymmetry in geomagnetic reversals recorded by 1.1-billion-year-old {K}eweenawan basalts},
     author={Swanson-Hysell, Nicholas L and Maloof, Adam C and Weiss, Benjamin P and Evans, David AD},
     journal={Nature Geoscience},
     volume={2},
@@ -7,4 +7,15 @@
     pages={713--717},
     year={2009},
     publisher={Nature Publishing Group}
+}
+
+@article{gordon1984paleomagnetic,
+    title={Paleomagnetic {E}uler poles and the apparent polar wander and absolute motion of {N}orth {A}merica since the Carboniferous},
+    author={Gordon, Richard G and Cox, Allan and O'Hare, Scott},
+    journal={Tectonics},
+    volume={3},
+    number={5},
+    pages={499--537},
+    year={1984},
+    publisher={Wiley Online Library}
 }
