--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -19,3 +19,166 @@
     year={1984},
     publisher={Wiley Online Library}
 }
+
+@article{argus2011geologically,
+  title={Geologically current motion of 56 plates relative to the no-net-rotation reference frame},
+  author={Argus, Donald F and Gordon, Richard G and DeMets, Charles},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={12},
+  number={11},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@book{cox2009plate,
+  title={Plate tectonics: how it works},
+  author={Cox, Allan and Hart, Robert Brian},
+  year={2009},
+  publisher={John Wiley \& Sons}
+}
+
+@article{gordon1991no,
+  title={No-net-rotation model of current plate velocities incorporating plate motion model {N}{U}{V}{E}{L}-1},
+  author={Gordon, Richard G},
+  journal={Geophysical research letters},
+  volume={18},
+  pages={2039--2042},
+  year={1991}
+}
+
+@article{demets1990current,
+  title={Current plate motions},
+  author={DeMets, Charles and Gordon, R Go and Argus, DF and Stein, Seth},
+  journal={Geophysical journal international},
+  volume={101},
+  number={2},
+  pages={425--478},
+  year={1990},
+  publisher={Oxford University Press}
+}
+
+@article{torsvik2012phanerozoic,
+  title={Phanerozoic polar wander, palaeogeography and dynamics},
+  author={Torsvik, Trond H and Van der Voo, Rob and Preeden, Ulla and Mac Niocaill, Conall and Steinberger, Bernhard and Doubrovine, Pavel V and van Hinsbergen, Douwe JJ and Domeier, Mathew and Gaina, Carmen and Tohver, Eric and others},
+  journal={Earth-Science Reviews},
+  volume={114},
+  number={3},
+  pages={325--368},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{idnurm1985lateI,
+  title={Late {M}esozoic and {C}enozoic palaeomagnetism of {A}ustralia—{I}. A redetermined apparent polar wander path},
+  author={Idnurm, Mart},
+  journal={Geophysical Journal International},
+  volume={83},
+  number={2},
+  pages={399--418},
+  year={1985},
+  publisher={Oxford University Press}
+}
+
+@article{idnurm1985lateII,
+  title={Late {M}esozoic and {C}enozoic palaeomagnetism of {A}ustralia—{I}{I}. Implications for geomagnetism and true polar wander},
+  author={Idnurm, Mart},
+  journal={Geophysical Journal International},
+  volume={83},
+  number={2},
+  pages={419--433},
+  year={1985},
+  publisher={Oxford University Press}
+}
+
+@article{muller1993revised,
+  title={Revised plate motions relative to the hotspots from combined {A}tlantic and {I}ndian {O}cean hotspot tracks},
+  author={M{\"u}ller, R Dietmar and Royer, Jean-Yves and Lawver, Lawrence A},
+  journal={Geology},
+  volume={21},
+  number={3},
+  pages={275--278},
+  year={1993},
+  publisher={Geological Society of America}
+}
+
+@book{fisher1987statistical,
+  title={Statistical analysis of spherical data},
+  author={Fisher, Nicholas I and Lewis, Toby and Embleton, Brian JJ},
+  year={1987},
+  publisher={Cambridge university press}
+}
+
+@article{patil2010pymc,
+  title={PyMC: {B}ayesian stochastic modelling in {P}ython},
+  author={Patil, Anand and Huard, David and Fonnesbeck, Christopher J},
+  journal={Journal of statistical software},
+  volume={35},
+  number={4},
+  pages={1},
+  year={2010},
+  publisher={Europe PMC Funders}
+}
+
+@article{hunter2007matplotlib,
+  title={Matplotlib: A 2D graphics environment},
+  author={Hunter, John D and others},
+  journal={Computing in science and engineering},
+  volume={9},
+  number={3},
+  pages={90--95},
+  year={2007}
+}
+
+@article{van2011numpy,
+  title={The {N}um{P}y array: a structure for efficient numerical computation},
+  author={Van Der Walt, Stefan and Colbert, S Chris and Varoquaux, Gael},
+  journal={Computing in Science \& Engineering},
+  volume={13},
+  number={2},
+  pages={22--30},
+  year={2011},
+  publisher={AIP Publishing}
+}
+
+@article{pesonen1983geomagnetic,
+  title={Geomagnetic field intensity and reversal asymmetry in late Precambrian Keweenawan rocks},
+  author={Pesonen, Lauri J and Halls, Henry C},
+  journal={Geophysical Journal International},
+  volume={73},
+  number={1},
+  pages={241--270},
+  year={1983},
+  publisher={Oxford University Press}
+}
+
+@article{tarling1996palaeomagnetic,
+  title={Palaeomagnetic-pole errors and a ‘small-circle’assessment of the Gondwanan polar-wander path},
+  author={Tarling, DH and Abdeldayem, AL},
+  journal={Geophysical Journal International},
+  volume={125},
+  number={1},
+  pages={115--122},
+  year={1996},
+  publisher={Oxford University Press}
+}
+
+@article{smirnov2010co,
+  title={Co-location of eruption sites of the Siberian Traps and North Atlantic Igneous Province: Implications for the nature of hotspots and mantle plumes},
+  author={Smirnov, Aleksey V and Tarduno, John A},
+  journal={Earth and Planetary Science Letters},
+  volume={297},
+  number={3},
+  pages={687--690},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{beck1989paleomagnetism,
+  title={Paleomagnetism of continental North America; Implications for displacement of crustal blocks within the Western Cordillera, Baja California to British Columbia},
+  author={Beck, Myrl E},
+  journal={Geological Society of America Memoirs},
+  volume={172},
+  pages={471--492},
+  year={1989},
+  publisher={Geological Society of America}
+}
