Add an introduction.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -182,3 +182,87 @@
   year={1989},
   publisher={Geological Society of America}
 }
+
+@article{beck2003absolute,
+  title={Absolute velocity of North America during the Mesozoic from paleomagnetic data},
+  author={Beck, Myrl E and Housen, Bernard A},
+  journal={Tectonophysics},
+  volume={377},
+  number={1},
+  pages={33--54},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{bryan1986rotation,
+  title={Rotation of the Colorado Plateau: An analysis of paleomagnetic data},
+  author={Bryan, Phillip and Gordon, Richard G},
+  journal={Tectonics},
+  volume={5},
+  number={4},
+  pages={661--667},
+  year={1986},
+  publisher={Wiley Online Library}
+}
+
+@article{seton2012global,
+  title={Global continental and ocean basin reconstructions since 200Ma},
+  author={Seton, M and M{\"u}ller, RD and Zahirovic, S and Gaina, C and Torsvik, T and Shephard, G and Talsma, A and Gurnis, M and Turner, M and Maus, S and others},
+  journal={Earth-Science Reviews},
+  volume={113},
+  number={3},
+  pages={212--270},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{boyden2011next,
+  title={Next-generation plate-tectonic reconstructions using GPlates},
+  author={Boyden, James A and M{\"u}ller, R Dietmar and Gurnis, Michael and Torsvik, Trond H and Clark, James A and Turner, Mark and Ivey-Law, Hamish and Watson, Robin J and Cannon, John S},
+  journal={Geoinformatics: cyberinfrastructure for the solid earth sciences},
+  volume={9},
+  pages={5--114},
+  year={2011},
+  publisher={Cambridge University Press Cambridge UK}
+}
+
+@article{bull2014effect,
+  title={The effect of plate motion history on the longevity of deep mantle heterogeneities},
+  author={Bull, Abigail L and Domeier, Mathew and Torsvik, Trond H},
+  journal={Earth and Planetary Science Letters},
+  volume={401},
+  pages={172--182},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{mcnamara2005thermochemical,
+  title={Thermochemical structures beneath Africa and the Pacific Ocean},
+  author={McNamara, Allen K and Zhong, Shijie},
+  journal={Nature},
+  volume={437},
+  number={7062},
+  pages={1136--1139},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
+@article{rudolph2014history,
+  title={History and dynamics of net rotation of the mantle and lithosphere},
+  author={Rudolph, Maxwell L and Zhong, SJ},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={15},
+  number={9},
+  pages={3645--3657},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{Tarling1996a,
+    Author = {Tarling, D. H. and Abdeldayem, A. L.},
+    Journal = {Geophysical Journal International},
+    Number = {1},
+    Pages = {115--122},
+    Title = {Palaeomagnetic‐Pole Errors and A `Small‐Circle'Assessment of the Gondwanan Polar‐Wander Path},
+    Volume = {125},
+    Year = {1996}}
