Describe the forward model.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -162,6 +162,24 @@
   publisher={Oxford University Press}
 }
 
+@article{irving1972hairpins,
+  title={Hairpins and superintervals},
+  author={Irving, E and Park, JK},
+  journal={Canadian Journal of Earth Sciences},
+  volume={9},
+  number={10},
+  pages={1318--1324},
+  year={1972},
+  publisher={NRC Research Press}
+}
+
+@book{goldstein1965classical,
+  title={Classical mechanics},
+  author={Goldstein, Herbert},
+  year={1965},
+  publisher={Pearson Education India}
+}
+
 @article{smirnov2010co,
   title={Co-location of eruption sites of the Siberian Traps and North Atlantic Igneous Province: Implications for the nature of hotspots and mantle plumes},
   author={Smirnov, Aleksey V and Tarduno, John A},
