Add clip markers

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -151,6 +151,8 @@ that exceeds 22.9 cm/yr at a 95\% credible level.
 
 \linenumbers
 
+%%BEGINCLIP
+
 %% main text
 \section{Introduction}
 \label{sec:introduction}
@@ -1096,6 +1098,7 @@ Additional analysis was performed using the Python packages NumPy and Scipy, and
 \nocite{van2011numpy}
 \nocite{jones2001open}
 
+%%ENDCLIP
 
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
